2005-06-06  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.c: added a11y support

2005-05-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* gnomecc-canvas.[ch]: new widget that inherits from GnomeCanvas, the
	drawing logic has been mostly moved from control-center.c, but the
	layout function has been quite improved (now handles RTL/LTR
	correctly, assigns a fixed width to all items and caches some things
	to make things a bit faster)
	
	* control-center.c: removed canvas drawing logic, and use the new
	widget

	* Makefile.am: include gnomecc-canvas.[ch]

2005-05-02  Frederic Crozat  <fcrozat@mandriva.com>

	* control-center-categories.c: (populate_category):
	append entries, so we get them in the correct order.

2005-04-11  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: update for libgnome-menu
	API renaming.

2005-04-06  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.c: (control_center_get_information):
	Update for slight change to menu_tree_lookup() API.

2005-03-27  Sebastien Bacher  <seb128@debian.org>

	* control-center-categories.c: (populate_category),
	(read_categories_from_menu_directory),
	(control_center_get_information): update to the new libgnome-menu API,
	patch from Mark McLoughlin <markmc@redhat.com>.

2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* control-center.c: (create_control_center): Fix a
	sparse warning.

2005-02-03  Chris Lahey  <clahey@boston.ximian.com>

	* control-center-categories.c (control_center_get_information):
	Prune empty categories.

2005-01-26  Jody Goldberg <jody@gnome.org>

	* control-center.c (relayout_canvas) : skip lines that are finished,
	  but keep processing up coming lines.  This should make alignment
	  work again.  While we're here add a bit more padding at the bottom.

2004-11-10  Mark McLoughlin  <mark@skynet.ie>

	* control-center-categories.[ch]: re-write to use libgnome-menu
	to load the contents of the preferences menu.

	* control-center.c: